config_setting(
    name = "darwin_amd64",
    constraint_values = [
        "@platforms//os:macos",
        "@platforms//cpu:x86_64",
    ],
)

config_setting(
    name = "linux_amd64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)

config_setting(
    name = "darwin_arm64",
    constraint_values = [
        "@platforms//os:macos",
        "@platforms//cpu:aarch64",
    ],
)

config_setting(
    name = "linux_arm64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:arm64",
    ],
)

sh_binary(
    name = "buildifier",
    srcs = [
        "scripts/buildifier.sh",
    ],
    data = select({
        ":darwin_amd64": ["@buildifier_darwin_amd64//file"],
        ":darwin_arm64": ["@buildifier_darwin_arm64//file"],
        ":linux_amd64": ["@buildifier_linux_amd64//file"],
        ":linux_arm64": ["@buildifier_linux_arm64//file"],
    }),
    deps = ["@bazel_tools//tools/bash/runfiles"],
)
