load("@io_bazel_stardoc//stardoc:stardoc.bzl", "stardoc")
load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@bazel_skylib//rules:diff_test.bzl", "diff_test")

bzl_library(
    name = "bazel_tools_srcs",
    srcs = [
        "@bazel_tools//tools:bzl_srcs",
    ],
)

bzl_library(
    name = "common_bzl",
    srcs = [
        "common.bzl",
    ],
)

stardoc(
    name = "github-docs",
    out = "github_doc.md",
    input = "github.bzl",
    deps = [
        ":bazel_tools_srcs",
        ":common_bzl",
    ],
)

stardoc(
    name = "s3-docs",
    out = "s3_doc.md",
    input = "s3.bzl",
    deps = [
        ":bazel_tools_srcs",
        ":common_bzl",
    ],
)

diff_test(
    name = "github_docs_diff",
    failure_message = """
Docs are outdated! Please run

bazel build //rules/repo_utils:github-docs
cp $(bazel cquery --output=files //rules/repo_utils:github-docs) rules/repo_utils/github.md and commit the changes.
    """,
    file1 = ":github-docs",
    file2 = ":github.md",
)
